# ethstaker-deposit-cli

./: .pre-commit-config.yaml  Makefile  README.md  deposit.sh  pyproject.toml  requirements.txt  requirements_test.txt  test_binary_btec_script.py  test_binary_deposit_script.py  test_btec_script.py  test_deposit_script.py  test_keystore.html
.github/: dependabot.yml  release_template.md
.github/workflows/: build.yml  comment.yml  docs.yml  runner.yml
build_configs/common/: requirements.in  requirements.txt
build_configs/linux/: build.spec
build_configs/macos/: build.spec
build_configs/windows/: build.spec  requirements.txt
docs/src/: SUMMARY.md  bls_to_execution_change_file.md  bls_to_execution_change_keystore_file.md  deposit_data_file.md  existing_mnemonic.md  exit_transaction_keystore.md  exit_transaction_mnemonic.md  generate_bls_to_execution_change.md  generate_bls_to_execution_change_keystore.md  generate_mnemonic.md  landing.md  local_development.md  new_mnemonic.md  other_install_options.md  partial_deposit.md  quick_setup.md  release_process.md  reporting_vulnerability.md  signed_exit_transaction_file.md
ethstaker_deposit/: __init__.py  credentials.py  deposit.py  settings.py
ethstaker_deposit/cli/: exit_transaction_keystore.py  exit_transaction_mnemonic.py  generate_bls_to_execution_change.py  generate_bls_to_execution_change_keystore.py  generate_keys.py  generate_mnemonic.py  partial_deposit.py
ethstaker_deposit/intl/ar/: deposit.json
ethstaker_deposit/intl/el/: deposit.json
ethstaker_deposit/intl/en/: deposit.json
ethstaker_deposit/intl/en/cli/: existing_mnemonic.json  exit_transaction_keystore.json  exit_transaction_mnemonic.json  generate_bls_to_execution_change.json  generate_bls_to_execution_change_keystore.json  generate_keys.json  generate_mnemonic.json  new_mnemonic.json  partial_deposit.json
ethstaker_deposit/intl/en/utils/: validation.json
ethstaker_deposit/intl/fr/: deposit.json
ethstaker_deposit/intl/id/: deposit.json
ethstaker_deposit/intl/it/: deposit.json
ethstaker_deposit/intl/ja/: deposit.json
ethstaker_deposit/intl/ko/: deposit.json
ethstaker_deposit/intl/pt-BR/: deposit.json
ethstaker_deposit/intl/ro/: deposit.json
ethstaker_deposit/intl/tr/: deposit.json
ethstaker_deposit/intl/zh-CN/: deposit.json
ethstaker_deposit/key_handling/: keystore.py
ethstaker_deposit/key_handling/key_derivation/: mnemonic.py
ethstaker_deposit/schema/: keystore.py
ethstaker_deposit/utils/: ascii_art.py  click.py  file_handling.py  intl.py  validation.py
tests/: test_deposit.py
tests/test_cli/: helpers.py  test_existing_mnemonic.py  test_exit_transaction_keystore.py  test_exit_transaction_mnemonic.py  test_generate_bls_to_execution_change.py  test_generate_bls_to_execution_change_keystore.py  test_generate_mnemonic.py  test_new_mnemonic.py  test_partial_deposit.py  test_regeneration.py
tests/test_key_handling/: test_keystore.py
tests/test_utils/: test_validation.py
