[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "ethstaker_deposit.__version__"}

[tool.pip-tools]
generate-hashes = true
no-annotate = true

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]

[project]
name = "ethstaker_deposit"
description = "Secure key generation for deposits"
readme = "README.md"
dependencies = [
    "annotated-types==0.7.0",
    "click==8.1.8",
    "eth-typing==5.2.1",
    "eth-utils==5.3.1",
    "pycryptodome==3.23.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyperclip==1.9.0",
    "py-ecc==8.0.0",
    "ssz==0.5.2",
    "cached-property==2.0.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cytoolz==1.0.1",
    "eth-hash==0.7.1",
    "hexbytes==1.3.1",
    "lru-dict==1.3.0",
    "pyrsistent==0.20.0",
    "six==1.17.0",
    "toolz==1.0.0",
    "typing-inspection==0.4.1",
]
requires-python = ">=3.9,<4"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "exceptiongroup==1.3.0",
    "jsonschema==4.25.1",
    "mypy==1.18.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "backports-asyncio-runner==1.2.0 ; python_version < '3.11'",
    "coverage==7.10.6",
    "tomli==2.2.1",
    "attrs==25.3.0",
    "iniconfig==2.1.0",
    "jsonschema-specifications==2025.9.1",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "referencing==0.36.2",
    "rpds-py==0.27.1",
    "typing-extensions==4.15.0",
    "ruff==0.13.0",
    "Pygments==2.19.2",
    "pathspec==0.12.1"
]

[project.urls]
"Homepage" = "https://github.com/ethstaker/ethstaker-deposit-cli"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
