[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { file = "ethstaker_deposit/VERSION" }

[tool.pip-tools]
generate-hashes = true
no-annotate = true

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]

[project]
name = "ethstaker_deposit"
description = "Secure key generation for deposits"
readme = "README.md"
dependencies = [
    "annotated-types==0.7.0",
    "click==8.3.1",
    "eth-typing==5.2.1",
    "eth-utils==5.3.1",
    "pycryptodome==3.23.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyperclip==1.11.0",
    "py-ecc==8.0.0",
    "ssz==0.5.2",
    "cached-property==2.0.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cytoolz==1.1.0",
    "eth-hash==0.7.1",
    "hexbytes==1.3.1",
    "lru-dict==1.4.1",
    "pyrsistent==0.20.0",
    "six==1.17.0",
    "toolz==1.1.0",
    "typing-inspection==0.4.2",
]
requires-python = ">=3.10,<4"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "exceptiongroup==1.3.1",
    "jsonschema==4.26.0",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "backports-asyncio-runner==1.2.0 ; python_version < '3.11'",
    "coverage==7.13.2",
    "tomli==2.4.0",
    "attrs==25.4.0",
    "iniconfig==2.3.0",
    "jsonschema-specifications==2025.9.1",
    "mypy-extensions==1.1.0",
    "packaging==26.0",
    "pluggy==1.6.0",
    "referencing==0.37.0",
    "rpds-py==0.30.0",
    "typing-extensions==4.15.0",
    "ruff==0.14.14",
    "Pygments==2.19.2",
    "pathspec==1.0.4"
]

[project.urls]
"Homepage" = "https://github.com/ethstaker/ethstaker-deposit-cli"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
